<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_logo"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="38sp">
    </TextView>

    <TextView
        android:id="@+id/login_login"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/login_login"
        android:textColor="@android:color/white"
        android:textSize="25sp">
    </TextView>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_login"
        android:layout_marginTop="32dp"
        android:hint="@string/login_sample_email"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="16sp">
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/inputGray"
        android:backgroundTintMode="src_in"
        android:ems="50"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="16sp"
        android:textColorHint="@color/inputSilver"></EditText>

    <Button
        android:id="@+id/login_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/login_password"
        android:background="@drawable/button_design_ac"
        android:padding="16dp"
        android:text="@string/login_loginToAccount"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white">
    </Button>

    <Button
        android:id="@+id/login_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_login_account"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design_pd1"
        android:padding="16dp"
        android:textAllCaps="false"
        android:text="@string/login_createNewAccount"
        android:textSize="16sp"
        android:textColor="@android:color/white">
    </Button>



</RelativeLayout>