<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/register_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/register_logo"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="38sp">
    </TextView>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_logo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/register_register"
        android:textColor="@android:color/white"
        android:textSize="20sp">
    </TextView>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/login_sample_email"
        android:inputType="textEmailAddress"
        android:padding="12sp"
        android:textColorHint="@android:color/black"
        android:autofillHints="" tools:targetApi="o">
    </EditText>

    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/inputGray"
        android:ems="50"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12sp"
        android:textColorHint="@color/inputSilver"
        android:autofillHints="" tools:targetApi="o">
    </EditText>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/inputGray"
        android:backgroundTintMode="src_in"
        android:ems="50"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="12sp"
        android:textColorHint="@color/inputSilver"
        android:autofillHints="" tools:targetApi="o">
    </EditText>

    <EditText
        android:id="@+id/register_conform_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/inputGray"
        android:backgroundTintMode="src_in"
        android:ems="50"
        android:hint="@string/user_account_confirm_password"
        android:inputType="textPassword"
        android:padding="12sp"
        android:textColorHint="@color/inputSilver"
        android:autofillHints="" tools:targetApi="o">
    </EditText>

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/register_conform_password"
        android:background="@drawable/button_design_ac"
        android:padding="16dp"
        android:text="@string/register_create_account"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white">
    </Button>


</RelativeLayout>